<resources>
    <string name="app_name">TestTaskNotes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notes_text">Заметки</string>
    <string name="text_plug">Заглушка</string>
    <string name="create_new_note">Создать новую заметку</string>
    <string name="theme">Тема</string>
    <string name="description">Описание</string>
    <string name="save_note_text">Сохранить заметку</string>
    <string name="edit_note">Редактор заметки</string>
    <string name="priority_text">Приоритет (от 1 до 5 по важности)</string>
    <string name="_1">1</string>
    <string name="edit">Редактировать</string>
    <string name="delete">Удалить</string>
    <string name="search_text">Поиск заметок</string>
    <string name="search">Поиск заметок</string>
    <string name="clear">Очистить</string>
    <string name="no_space_for_text">Весь текст не вместился...</string>
</resources>